hphp/test/zend/good/ext/mbstring/tests/mb_strlen_variation1.php.skipif
<?php
extension_loaded('mbstring') or die('skip');
function_exists('mb_strlen') or die("skip mb_strlen() is not available in this build");
?>