hphp/test/zend/bad/ext/iconv/tests/iconv_strlen_variation2.php.skipif
<?php
extension_loaded('iconv') or die('skip');
function_exists('iconv_strlen') or die("skip iconv_strlen() is not available in this build");
?>